# Trapcoin_gui

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  README.md
src/gui/ui/: aboutdialog.ui
